# llm-code-execution

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/skills/: NOTICE.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  verify.sh
backend/app/: auth.py  config.py  llm.py  main.py  schemas.py
backend/app/sandbox/: base.py  docker_backend.py
backend/sandbox-image/: Dockerfile
backend/tests/: _mutants.py  conftest.py  test_auth.py  test_auth_mutation.py  test_llm.py  test_main.py
docs/adr/: 0001-authentication-approach.md  0002-agentic-auth-security-testing.md
frontend/: .env.example  .npmrc  .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  verify.sh  vite.config.ts
security/: .gitignore  Dockerfile  README.md  docker-compose.test.yml  pyproject.toml  verify.sh
security/comparisons/2026-06-13-strix-vs-ours/: SUMMARY.md  compare-leveled.txt  compare-mutant.txt  compare-real.txt  ours-mutant.findings.json  strix-leveled.report.md  strix-leveled.run.json  strix-leveled.vulnerabilities.json  strix-mutant.notes.json  strix-mutant.report.md  strix-mutant.run.json  strix-real.notes.json  strix-real.report.md  strix-real.run.json
security/mock_oidc/: __init__.py  server.py
security/secagent/: __init__.py  run.py
security/secagent/agent_core/: __init__.py  compare.py  eval.py  html_report.py  keys.py  loop.py  report.py  tools.py
security/secagent/modules/: __init__.py
security/secagent/modules/auth/: __init__.py  checklist.py  ground_truth.yaml  prompt.py  tools.py
security/secagent/modules/auth/mutants/: __init__.py
security/tests/: conftest.py  test_auth_endpoint.py  test_compare.py  test_eval_scorer.py  test_logs.py  test_loop_budget.py  test_loop_robustness.py  test_loop_skeleton.py  test_mint_token.py  test_mutants.py  test_report_html.py  test_run_smoke.py  test_tools_guardrail.py
(+16 files in other folders)
