[project]
name = "llm-code-execution-backend"
version = "0.1.0"
description = "Backend for the LLM code-generation + sandbox execution app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "docker>=7.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # OIDC access-token validation (RS256 via JWKS). The [crypto] extra pulls in
    # `cryptography`, used for RS256 verification (and for minting test tokens).
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
