[project]
name = "llm-code-execution-security"
version = "0.1.0"
description = "Agentic auth-security testing harness: a custom red-team agent for /api/execute"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pyjwt[crypto]>=2.9",
    "cryptography>=42",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `secagent` and `mock_oidc` resolve from here; the backend `app` package is on PYTHONPATH.
pythonpath = ["."]

[tool.ruff]
line-length = 100
